welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:5: error: '(' expected but '{' found.
	 {(n >= 190 == true && n<= 210 == true) {
         ^nearHundred:10: error: illegal start of simple expression
}
^