welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	if (n >= 90 == true && n<= 110 == true) {
		return true
	} else if
	 {(n >= 190 == true && n<= 210 == true) {
		return true
	} else
		return false
	}
}
